[package]
name = "eleel"
version = "0.1.0"
edition = "2021"

[dependencies]
execution_layer = { git = "https://github.com/jimmygchen/lighthouse", branch = "das-fetch-blobs" }
tree_hash = "0.5.1"
tree_hash_derive = "0.5.1"
task_executor = { git = "https://github.com/jimmygchen/lighthouse", branch = "das-fetch-blobs" }
eth2_network_config = { git = "https://github.com/jimmygchen/lighthouse", branch = "das-fetch-blobs" }
eth2 = { git = "https://github.com/jimmygchen/lighthouse", branch = "das-fetch-blobs" }
ethereum_serde_utils = "0.5.1"
tokio = { version = "1.0.0", features = ["rt-multi-thread"] }
axum = { version = "0.6.10", features = ["headers"] }
lru = "0.10.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
eventsource-client = "0.11.0"
futures = "0.3.26"
serde_repr = "0.1.11"
exit-future = "0.2.0"
tracing-slog = "0.2.0"
slog = "2.7.0"
clap = { version = "4.0.0", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
keccak-hash = "0.10.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
toml = "0.8.0"
hex = "0.4.3"
async-channel = "1.9.0"
